# PurePod

./: .env.example  .gitignore  docker-compose.yml  docky
.claude/: settings.local.json
manager/: Dockerfile  Dockerfile.dev  requirements.txt
manager/frontend/src/: App.tsx  index.css
manager/frontend/src/components/: AddFeedForm.tsx  EpisodeTable.tsx  FeedCard.tsx  FeedView.tsx  PasswordGate.tsx  StatusOverview.tsx
manager/frontend/src/hooks/: useWebSocket.ts
manager/frontend/src/lib/: api.ts
manager/frontend/src/types/: api.ts
manager/src/: config.py  database.py  ingest.py  main.py  models.py  tasks.py
worker/: .env  README.md  config.py  main.py  pyproject.toml
worker/.claude/: settings.local.json
worker/scripts/: start_worker.scpt
worker/scripts/PurePodcastWorker.app/Contents/: Info.plist
worker/scripts/PurePodcastWorker.app/Contents/Resources/: applet.rsrc
worker/scripts/PurePodcastWorker.app/Contents/Resources/Scripts/: main.scpt
worker/worker/: main.py
